# gz_train1

gz_train/: s2.sdf
gz_train/imported_world/: import1.sdf
gz_train/imported_world/tugbot_depot/: tugbot_depot.sdf
gz_train/model_testing/: tugbot_depot.sdf
gz_train/robot_building/: buildrobot1.sdf  dof1.sdf  testbuild2.sdf  testbuild3.sdf  turtletrack1.sdf
gz_train/testmodels/: ackertest1.sdf  actor_test1.sdf  dof1.sdf
gz_train/worldbuilding/: build_world2.sdf  buildworld1.sdf  cameraworld2.sdf  mod1.sdf  sonoma.sdf  testdof1.sdf
gz_train/worldbuilding/sensor_data/: cvdata.py
gz_train1/: CMakeLists.txt  package.xml
gz_train1/gz_train1/: test_pub.py
gz_train1/launch/: joy_launch.py  joy_launch2.py  launch_urdf.py  rviz_urdf.py  sub_launch.py  topic.py  urdf_launch.py  urdf_launch.xml  world_launch.xml  xacro_launch.py
gz_train1/meshes/: d22_3dof_urdftest_model1_base_dpzpl0.dae  d22_3dof_urdftest_model1_base_trctmq.dae  d22_3dof_urdftest_model1_base_vkqm6s.dae  d22_3dof_urdftest_model1_base_vxzjhf.dae  d22_3dof_urdftest_model1_col_base_col_obj_1b7eau.dae  d22_3dof_urdftest_model1_col_base_col_obj_xepwat.dae  d22_3dof_urdftest_model1_col_base_col_obj_yo1t3u.dae  d22_3dof_urdftest_model1_col_joint1_col_obj_0lditd.dae  d22_3dof_urdftest_model1_col_joint1_col_obj_ngyll3.dae  d22_3dof_urdftest_model1_col_joint2_col_obj_sie3w6.dae  d22_3dof_urdftest_model1_col_joint3_col_obj_37vkxn.dae  d22_3dof_urdftest_model1_col_joint3_col_obj_ftooqk.dae  d22_3dof_urdftest_model1_col_joint3_col_obj_nuwwpz.dae  d22_3dof_urdftest_model1_col_joint3_col_obj_ruzol4.dae  d22_3dof_urdftest_model1_col_joint3_col_obj_vlhx8a.dae  d22_3dof_urdftest_model1_joint1_e1tw2u.dae  d22_3dof_urdftest_model1_joint1_fvmgbl.dae  d22_3dof_urdftest_model1_joint3_brr7c3.dae  d22_3dof_urdftest_model1_joint3_inhsog.dae  d22_3dof_urdftest_model1_joint3_x5ochc.dae  d22_3dof_urdftest_model1_joint3_yqqprg.dae
gz_train1/src/: gz_pub_sleep.cpp  gz_sub.cpp  joytest.cpp  joytest2.cpp  loop_pub.cpp  tf2_staticbroad_test1.cpp
gz_train1/urdf/install/: local_setup.sh
gz_train1/worlds/: cam_ex.sdf  cambuild.sdf  camjoylidar_.sdf  joy_world.sdf  lidar.sdf  t1.sdf  testbuild3.sdf  testworld1.sdf  topic.sdf
gz_train1/worlds/install/: local_setup.ps1  local_setup.sh  setup.sh
src/gz_train1/: CMakeLists.txt  package.xml
src/gz_train1/launch/: joy_launch.py  joy_launch.xml  rviz_urdf.py
src/gz_train1/meshes/: d22_3dof_urdftest_model1_base_dsztvu.dae  d22_3dof_urdftest_model1_col_base_col_obj_dudcq4.dae  d22_3dof_urdftest_model1_col_base_col_obj_kdcoun.dae  d22_3dof_urdftest_model1_col_joint1_col_obj_jvugl3.dae  d22_3dof_urdftest_model1_col_joint1_col_obj_lsfpxs.dae  d22_3dof_urdftest_model1_col_joint1_col_obj_tkkoia.dae  d22_3dof_urdftest_model1_col_joint2_col_obj_kpgk1e.dae  d22_3dof_urdftest_model1_col_joint2_col_obj_m21zvf.dae  d22_3dof_urdftest_model1_col_joint2_col_obj_xqhuu1.dae  d22_3dof_urdftest_model1_col_joint2_col_obj_xvxfcx.dae  d22_3dof_urdftest_model1_joint1_a70nsl.dae  d22_3dof_urdftest_model1_joint1_knxdek.dae  d22_3dof_urdftest_model1_joint1_orh1up.dae  d22_3dof_urdftest_model1_joint2_5a0blk.dae  d22_3dof_urdftest_model1_joint2_bd0ggz.dae  d22_3dof_urdftest_model1_joint2_c66jrs.dae  d22_3dof_urdftest_model1_joint2_cmhc3o.dae  d22_3dof_urdftest_model1_joint2_fu85wt.dae  d22_3dof_urdftest_model1_joint3_woduqe.dae
src/gz_train1/src/: gz_sub.cpp  joytest.cpp  joytest2.cpp
src/gz_train1/urdf/atmos_dual/: model.config
src/gz_train1/urdf/install/: local_setup.bash  local_setup.zsh  setup.sh
src/gz_train1/urdf/log/: latest_build
src/gz_train1/worlds/log/: latest_build
